# cmake-discordsdk

./: .gitignore  CMakeLists.txt
